feat udistrital/arka_cliente#1067: Seguridad
- Limpieza controlador obsoleto /elementosconsumo/
