# swagger/swagger.json
@@ -62,26 +62,6 @@
                 }
             }
         },
-        "/acta_recibido/elementosconsumo/": {
-            "get": {
-                "tags": [
-                    "acta_recibido"
-                ],
-                "description": "Trae todos los elementos de consumo",
-                "operationId": "ActaRecibidoController.GetAllElementosConsumo",
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Elemento"
-                        }
-                    },
-                    "404": {
-                        "description": "not found resource"
-                    }
-                }
-            }
-        },
         "/acta_recibido/get_all_actas/": {
             "get": {
                 "tags": [
